--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^0.24.0",
         "core-js": "^3.6.5",
         "emailjs-com": "^3.2.0",
+        "express": "^4.17.1",
         "firebase": "^9.1.2",
         "jquery": "^3.6.0",
         "vee-validate": "^2.2.15",
